@@ -61,6 +61,7 @@ admin.message.exportcsvfail=Failure while exporting internal database data to CS
 admin.message.indexrefreshed=Index refreshed
 admin.message.migratedatabase=Successfully migrated to new database at URL {0}.
 admin.message.migrationfailure=Failed to migrate to new database\: {0}.
+admin.message.nonnumeric=Property \"{0}\" requires a numeric value.  \"{1}\" is invalid.
 admin.message.passwordsnomatch=Passwords do not match, please re-enter.
 admin.message.propertyfailure=Failure while processing property values\: {0}.
 admin.message.recentchanges=Recent changes successfully loaded.
