@@ -51,6 +51,8 @@ Bugfixes:
     not redirect.
   * Use the wiki system directory for temp file storage in ImageIO processing
     to prevent errors on misconfigured systems.  Reported by jfbraz.
+  * Validate that properties which must be numeric are set as numbers from
+    Special:Admin.
 
 Translation Updates:
 
